fix checkbox visibility issue

--- a/chameleon-wikifab.less
+++ b/chameleon-wikifab.less
@@ -634,8 +634,12 @@ a:hover {
 }
 
 .WfFormCheckbox input{
-    margin-right: 12px;
-    vertical-align: -5px;
+    margin-right: 5px;
+    line-height: 19px;
+    vertical-align: -3px;
+    width: 19px;
+    height: 19px;
+    display: inline-block;
 }
 
 .WfFormCheckbox input[type="checkbox"]:focus {
@@ -646,6 +650,7 @@ a:hover {
 
 .WfFormCheckbox input:after {
     display:block;
+    margin:0px;
     visibility: visible;
 }
 
